--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "serve": "^14.2.4"
+    "react-hot-toast": "^2.5.2",
+    "serve": "^14.2.4",
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
